@@ -152,6 +152,7 @@ wxGTK:
   with other applications.
 - Fix wxNotebook::GetPage{Text,Image}() when they were called from the page
   change event handler for the first added page (Mikkel S).
+- Fixed wxBitmapButton to use focus and hover bitmaps correctly.
 
 wxMac:
 
